# pomodoro-applet

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  PomodoroApplet.server  PomodoroApplet.server.in  README  autogen.sh  com.jstump.PomodoroApplet.panel-applet.in  com.jstump.PomodoroApplet.panel-applet.in.in  configure.ac  org.gnome.panel.applet.PomodoroAppletFactory.service.in  pomodoro.c
debian/: changelog  control  copyright  watch
po/: POTFILES.in
src/: Makefile.am  applet-common.c  applet-common.h  applet-gnome-gp.c  applet-gnome.c  applet-mate.c  io.stump.PomodoroApplet.mate-panel-applet.in.in  io.stump.PomodoroApplet.panel-applet.in.in  org.gnome.panel.applet.PomodoroAppletFactory.service.in  org.mate.panel.applet.PomodoroAppletFactory.service.in  pomodoro.c
